toggle visibility of nav buttons according to search page index. make form submit handler use call to named function (avoid copy paste of code)

--- a/MWP-Part3/styles/index.css
+++ b/MWP-Part3/styles/index.css
@@ -296,6 +296,7 @@ form {
 #search-results-navigation input[type='image'] {
     height: 60px;
     width: auto;
+    visibility: hidden; /* Initially hide navigation items as no search has been performed. */
 }
 
 #previous-search-results {
